----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2003-03-07 Marc Delisle  <lem9@users.sourceforge.net>
    * transformation_wrapper.php3, lang/*,
      libraries/transformations/image_jpeg__inline.inc.php3:
      now 2 options for resize: width, height

2003-03-06 Garvin Hicking <me@supergarv.de>
    * libraries/common.lib.php3, libraries/display_tbl.lib.php3:
      Fix bug #658668, special escaping of \n, \r and \t characters.
      Please test, works fine for me now (both magic_quotes on/off).
      
2003-03-05 Robin Johnson  <robbat2@users.sourceforge.net>
    * Documentation.html, Documentation.txt: Long-withstanding spelling fixes!
    * updatedocs.sh: Script to make conversion easier

2003-03-05 Garvin Hicking <me@supergarv.de>
    * Documentation.html: Added FAQ 2.6 about localhost-socket connections.
    * libraries/relation.lib.php3, libraries/transformations.lib.php3,
      tbl_relation.php3, tbl_move_copy.php3: Replace PMA_handleSlashes() 
      call with PMA_sqlAddslashes() call because of new global s
      lashes-handling.
    * sql.php3: Fixed querytime bug, when query was only shown for PHP
      display.
    * read_dump.php3, sql.php3, tbl_alter.php3,
      tbl_properties_export.php3: Fixed remaining calls to stripslashes() 
      where not neccessary, because grab_globals already stripslashed 
      the data. This fixes the problem of the SQL Pretty printer showing 
      the data wrongly formatted.
      
2003-03-05 Michal Cihar  <nijel@users.sourceforge.net>
    * libraries/sqlparser.data.php3: TRANSACTION isn't reserved word (fixes
     #697961)

2003-03-05 Marc Delisle  <lem9@users.sourceforge.net>
    * Documentation.html, faq 1.29 about the "duplicate field names" problem
    * transformation_wrapper.php3, libraries/defines_php.lib.php3,
      libraries/transformations/image_jpeg__inline.inc.php3:
      resized thumbnails

2003-03-03 Alexander M. Turek  <rabus@users.sourceforge.net>